# IJReductions

./: .gitignore  CMakeLists.txt  LICENSE  README.md
lib/boost_1_67_0/: project-config.jam.2  project-config.jam.3  project-config.jam.4
lib/boost_1_67_0/bin.v2/: project-cache.jam
src/: CMakeLists.txt  PRI.cpp  PRI.h  SegTree.cpp  SegTree.h  Utils.h  main.cpp
tst/: CMakeLists.txt  PRI.cpp  SegTree.cpp  SegTreeTest.cpp  Utils.cpp  UtilsTest.cpp
tst/examples/Q1/: Points.tbl  Points_t.tbl  Rectangles.tbl  Rectangles_T.tbl
tst/examples/Q2/: Points.tbl  Points_geom.tbl  R_geom.tbl  Rectangles.tbl
tst/examples/Q3/: Points.tbl  Points_geom.tbl  R_geom.tbl  Rectangles.tbl
